- Popup z-index fixed - Code cleanup

--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,5 @@
     line-height: 1.8;
     padding: 10px;
     position: absolute;
-    z-index: 1000;
+    z-index: 9999;
 }
